tests/NormalTests/paczka1/fuzzy1/45999129.err
Error in line 3: SRdr S203 22,2
Error in line 1: S936 S203 68,8
Error in line 17: P6lUroH3HB S590 3,2
Error in line 27: OuV4 S203 8,9
Error in line 28: OuV4 S936 53,9
Error in line 14: SRdr S590 9,9
